[package]
name = "rust-csv2beancount"
description = "Convert csv files of transactions to beancount format"
version = "0.1.0"
authors = ["Alex Kursell <alexkursell@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0" , features = ["derive"] }
serde_yaml = "0.8"
csv = "1.1.1"
structopt = "0.2"
chrono = "0.4"
